part2/2_02/app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes: # Define volume
        - name: todo-image
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo
          image: ddeeh/k8s_todo
          volumeMounts: # Mount volume
          - name: todo-image
            mountPath: /usr/app/media
