part2/2_02/app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 8000
