part2/2_02/app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /todo/todos
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 2345
  - http:
      paths:
      - path: /todo/image
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 2345
  - http:
      paths:
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 2345
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 5432
